[package]
name = "raisin_events"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
dotenv = "0.15.0"
ethers = { version = "2.0", features = ["rustls", "ws"] }
tokio = { version = "1.28.1", features = ["full"] }
